--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
 .App {
+  display: flex;
+  height: 100vh;
+}
+
+.poster_column {
+  font-size: 60px;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  flex: 0.35;
+  background-color: rgb(184, 44, 44);
+  padding-left: 20px;
+  word-break: break-word;
+}
+
+.punchline {
+  display: flex;
+  height: 95vh;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.new_joke {
+  display: flex;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.joke_button {
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 10px;
+  width: 100px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.goodbadgreat_column {
+  background-color: rgb(62, 62, 155);
+  margin-left: 5px;
   display: flex;
   flex-direction: column;
+  flex: 0.65;
+}
+
+.good_name {
+  height: 33vh;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.good_name .box {
+  color: rgb(0, 255, 0);
+  border: 10px solid rgb(0, 255, 0);
+}
+
+.bad_name {
+  height: 33vh;
+  display: flex;
+  align-items: center;
+}
+
+.bad_name .box {
+  color: red;
+  border: 10px solid red;
+}
+
+.great_name {
+  height: 33vh;
+  display: flex;
+  align-items: center;
+}
+
+.great_name .box {
+  color: rgb(216, 148, 3);
+  border: 10px solid rgb(216, 148, 3);
+}
+
+.box {
+  font-size: 60px;
+  font-weight: bolder;
+  width: 25%;
+  text-align: center;
+}
+
+.about {
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  height: 15vh;
+  width: 100%;
+  font-size: calc(1vw + 0.25vh + 2vmin);
+  background-color: rgb(35, 35, 126);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding-left: 25px;
+  word-break: break-word;
 }
